# speech2braille

./: README.md
client/: README.md  openapi-ts.config.ts  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: App.tsx  main.tsx  routeTree.gen.ts
client/src/components/: BrailleTranslator.tsx  SpeechToBraille.tsx
client/src/hooks/: useSpeechToBrailleWebSocket.ts
client/src/lib/client/: index.ts  schemas.gen.ts  sdk.gen.ts  types.gen.ts
client/src/lib/client/@tanstack/: react-query.gen.ts
client/src/routes/: __root.tsx  index.tsx  speech.tsx
server/: .env.example  README.md  pyproject.toml
server/src/speech2braille/: __init__.py  config.py  dependencies.py  main.py
server/src/speech2braille/models/: __init__.py  braille.py  health.py  transcription.py
server/src/speech2braille/routers/: __init__.py  health.py  speech.py  tables.py  translation.py
server/src/speech2braille/services/: __init__.py  asr_service.py  braille_service.py  table_service.py  vad_service.py
server/src/speech2braille/websockets/: __init__.py  speech_to_braille.py
